<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.tofersoft</groupId>
	<artifactId>xinos</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>gxt-basic-public-3x</name>
	<description>Very basic GXT maven setup</description>

	<properties>

		<!-- GXT -->
		<gxt.version>3.1.1</gxt.version>

		<!-- GWT -->
		<gwt.version>2.6.1</gwt.version>
		<gwt.style>OBF</gwt.style>

		<!-- Maven -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>

	</properties>

	<repositories>
		<repository>
			<id>xuggle repo</id>
			<url>http://xuggle.googlecode.com/svn/trunk/repo/share/java/</url>
			<!--<url>http://m2.funambol.com/repositories/artifacts/</url>-->
		</repository>
	</repositories>

	<build>

		<finalName>Xinos</finalName>

		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<!-- Skips the GWTTestCases during Junit Testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<excludes>
						<exclude>**/*GwtTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- GWT -->
			<!-- 'mvn gwt:run' - runs development mode -->
			<!-- 'mvn gwt:debug' - runs debug mode -->
			<!-- 'mvn gwt:compile' - compiles gwt -->
			<!-- 'mvn gwt:test' or 'mvn integration-test' - runs the gwt tests (*GwtTest.java), (run a suite its faster) -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<configuration>
					<strict>true</strict>
					<testTimeOut>180</testTimeOut>
					<includes>**/*GwtTestSuite.java</includes>
					<excludes>**/*GwtTest.java</excludes>
					<mode>htmlunit</mode>
					<extraJvmArgs>-Xss1024K -Xmx2048M -XX:MaxPermSize=256M -Dxinos.test=argument</extraJvmArgs>
					<logLevel>INFO</logLevel>
					<style>${gwt.style}</style>
					<copyWebapp>true</copyWebapp>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
					<runTarget>Xinos.html</runTarget>
					<modules>
						<module>com.tofersoft.xinos.Xinos</module>
						<module>com.tofersoft.xinos.Player</module>
					</modules>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test</goal>
							<!-- <goal>resources</goal> -->
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>gwt-maven-plugin</artifactId>
										<versionRange>[2.6.1,)</versionRange>
										<goals>
											<goal>resources</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>

		<!-- GXT -->
		<!-- http://docs.sencha.com/gxt/3.1/getting_started/maven/Maven.html -->
		<dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>gxt</artifactId>
			<version>${gxt.version}</version>
		</dependency>

		<dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>gxt-chart</artifactId>
			<version>${gxt.version}</version>
		</dependency>

		<!-- GXT 3.1.0+ - Neptune Theme -->
		<dependency>
			<groupId>com.sencha.gxt</groupId>
			<artifactId>gxt-theme-neptune</artifactId>
			<version>${gxt.version}</version>
		</dependency>

		<!-- GWT -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-codeserver</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwt.version}</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<!-- Codecs -->

		<dependency>
			<groupId>io.humble</groupId>
			<artifactId>humble-video-all</artifactId>
			<version>0.2.1</version>
			<exclusions>
				<exclusion>
					<artifactId>humble-video-arch-i686-w64-mingw32</artifactId>
					<groupId>io.humble</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.1.2</version>
			<!-- <scope>provided</scope> -->
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.2</version>
			<!-- <scope>provided</scope> -->
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.10</version>
		</dependency>

		<!-- Database -->
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.11.1.1</version>
		</dependency>

		<!-- Plug-in Module Support -->
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.9-RC2</version>
		</dependency>

		<!-- Plupload -->
		<!--
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>plupload</artifactId>
			<version>2.1.2</version>
		</dependency>
		-->

		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
</project>
